@@ -508,6 +508,17 @@
 			</tr>
 			</table>
 			<br>
+			<h2><span data-i18n="Timer Plan">Timer Plan</span>:</h2>
+			<table class="display" id="timerplantable" border="0" cellpadding="0" cellspacing="0">
+				<tr>
+					<td align="right" style="width:60px"><label><span data-i18n="Plan">Plan</span>: </label></td>
+					<td><select id="comboTimerplan" name="ActiveTimerPlan" style="width:120px" class="combobox ui-corner-all">
+						<option data-i18n="default" value="0">default</option>
+						<option data-i18n="Holiday" value="1">Holiday</option>
+					</select></td>
+				</tr>
+			</table>
+			<br>
 			<h2><span data-i18n="Doorbell Command"></span>:</h2>
 			<table class="display" id="doorbelltable" border="0" cellpadding="0" cellspacing="0">
 				<tr>
@@ -815,6 +826,9 @@ function ShowSettings()
       }
       if (typeof data.EmailAsAttachment != 'undefined') {
         $("#emailtable #checkEmailAsAttachment").prop('checked',data.EmailAsAttachment==1);
+      }
+      if (typeof data.ActiveTimerPlan != 'undefined') {
+        $("#timerplantable #comboTimerplan").val(data.ActiveTimerPlan);
       }
       if (typeof data.DoorbellCommand != 'undefined') {
         $("#doorbelltable #comboDoorbellCommand").val(data.DoorbellCommand);
