@@ -43,6 +43,7 @@ Version 1.0.xxxx (April xxth 2014)
 - Changed: Camera setup, dropped videoURL, Screenshots are now taking from within Domoticz, now possible to watch live camera over internet connection (snapshot refresh every 100ms)
 - Implemented: RFXtrx TH12 soil sensor (Imagintronix)
 - Fixed: (to be verified) possible crash when sending emails when no internet connection was available
+- Implemented: Option in settings to choose default or holiday timer plan (maybe custom plans later)
 
 Version 1.0.1680 (April 21th 2014)
 - Implemented: Support for Forecast.io
